--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       sizes="32x32"
       href="./assets/favicon-32x32.png"
     />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body class="home">
     <a class="skip-to-content" href="#main">Skip to content</a>
