--- a/index.html
+++ b/index.html
@@ -5,71 +5,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Space Project</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;700&family=Bellefair&family=Barlow:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="./assets/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="./style.css" />
+
+    <link rel="stylesheet" href="/main.scss" />
   </head>
-  <body class="home">
-    <a class="skip-to-content" href="#main">Skip to content</a>
-    <header class="primary-header flex">
+  <body>
+    <a href="#main">Skip to content</a>
+    <header>
       <div>
-        <img
-          src="./assets/shared/logo.svg"
-          alt="space tourism logo"
-          class="logo"
-        />
+        <img src="./assets/shared/logo.svg" alt="space tourism logo"/>
       </div>
-      <button class="mobile-nav-toggle" aria-controls="primary-navigation">
-        <span class="sr-only" aria-expanded="false">Menu</span>
+      <button>
+        <span>Menu</span>
       </button>
       <nav>
-        <ul
-          id="primary-navigation"
-          data-visible="false"
-          class="primary-navigation underline-indicators flex"
-        >
-          <li class="active">
-            <a
-              class="ff-sans-cond uppercase text-white letter-spacing-2"
-              href="./home.html"
-              ><span aria-hidden="true">00</span>Home</a
+        <ul>
+          <li>
+            <a href="./home.html"><span>00</span>Home</a>
+          </li>
+
+          <li>
+            <a href="destination.html"
+              ><span>01</span>Destination</a
             >
           </li>
 
           <li>
-            <a
-              class="ff-sans-cond uppercase text-white letter-spacing-2"
-              href="destination.html"
-              ><span aria-hidden="true">01</span>Destination</a
-            >
-          </li>
-
-          <li>
-            <a
-              class="ff-sans-cond uppercase text-white letter-spacing-2"
-              href="technology.html"
-              ><span aria-hidden="true">02</span>Technology</a
+            <a href="technology.html"
+              ><span>02</span>Technology</a
             >
           </li>
         </ul>
       </nav>
     </header>
 
-    <main id="main" class="grid-container grid-container--home">
+    <main>
       <div>
-        <h1 class="text-accent fs-500 ff-sans-cond uppercase letter-spacing-1">
+        <h1>
           So, you want to travel to
-          <span class="d-block fs-900 ff-serif text-white">Space</span>
+          <span>Space</span>
         </h1>
 
         <p>
@@ -80,9 +59,7 @@
         </p>
       </div>
       <div>
-        <a href="#" class="large-button uppercase ff-serif text-dark bg-white"
-          >Explore</a
-        >
+        <a href="#">Explore</a>
       </div>
     </main>
   </body>
