Fixed the links in the index.html

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
       href="./assets/favicon-32x32.png"
     />
 
-    <link rel="stylesheet" href="/main.scss" />
+    <link rel="stylesheet" href="./main.css" />
   </head>
   <body>
     <a href="#main">Skip to content</a>
     <header>
       <div>
-        <img src="./assets/shared/logo.svg" alt="space tourism logo"/>
+        <img src="./assets/shared/logo.svg" alt="space tourism logo" />
       </div>
       <button>
         <span>Menu</span>
@@ -30,15 +30,11 @@
           </li>
 
           <li>
-            <a href="destination.html"
-              ><span>01</span>Destination</a
-            >
+            <a href="destination.html"><span>01</span>Destination</a>
           </li>
 
           <li>
-            <a href="technology.html"
-              ><span>02</span>Technology</a
-            >
+            <a href="technology.html"><span>02</span>Technology</a>
           </li>
         </ul>
       </nav>
