--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./main.css" />
   </head>
   <body>
-    <a href="#main">Skip to content</a>
+    <!-- <a href="#main">Skip to content</a>
     <header>
       <div>
         <img src="./assets/shared/logo.svg" alt="space tourism logo" />
@@ -38,7 +38,7 @@
           </li>
         </ul>
       </nav>
-    </header>
+    </header> -->
 
     <main>
       <div>
