Add the planet-navbar to the destination.html

--- a/destination.html
+++ b/destination.html
@@ -39,7 +39,7 @@ crossorigin="anonymous"
   </button>
 </nav>
 </header>
-<main class="main-destination">
+<!-- <main class="main-destination">
     <section class="planet-section"> 
         <h1 class="destination-page-header"><span class="bold-text">01</span> Pick your destination</h1>
         <figure class="fig-moon">
@@ -66,6 +66,83 @@ crossorigin="anonymous"
         </div>
     </section>
     
+</main> -->
+<main class="main-destination">
+  <input type="radio" name="planet" id="moon" class="destination-input" checked>
+  <input type="radio" name="planet" id="mars" class="destination-input">
+  <input type="radio" name="planet" id="europa" class="destination-input">
+  <input type="radio" name="planet" id="titan" class="destination-input">
+
+  <section class="planet-section"> 
+      <h1 class="destination-page-header"><span class="bold-text">01</span> Pick your destination</h1>
+      <!-- Moon -->
+      <figure class="fig-moon figure-destination">
+          <img src="./assets/destination/image-moon.png" alt="Moon image" class="img-moon img-destination">
+      </figure>
+      <!-- Mars -->
+      <figure class="fig-mars figure-destination">
+        <img src="./assets/destination/image-mars.png" alt="Mars image" class="img-mars img-destination">
+    </figure>
+     <!-- Europa -->
+     <figure class="fig-europa figure-destination">
+      <img src="./assets/destination/image-europa.png" alt="Europa image" class="img-europa img-destination">
+    </figure>
+    <!-- Titan -->
+    <figure class="fig-titan figure-destination">
+      <img src="./assets/destination/image-titan.png" alt="Titan image" class="img-titan img-destination">
+    </figure>
+    
+  </section>
+  <section class="planet-navigation-container">
+    <label for="moon" class="nav-moon nav-label">Moon</label>
+    <label for="mars"  class="nav-mars nav-label">Mars</label>
+    <label for="europa"  class="nav-europa nav-label">Europa</label>
+    <label for="titan"  class="nav-titan nav-label">Titan</label>
+  </section>
+  <section class="planet-info-section">
+    <article class="planet-info info-moon">
+      <h2 class="planet-name-header">Moon</h1>
+      <p class="destination-paragraph">See our planet as you’ve never seen it before. A perfect relaxing trip away to help regain perspective and come back refreshed. While you’re there, take in some history by visiting the Luna 2 and Apollo 11 landing sites.</p>
+      <div class="planet-date-container">
+        <h3 class="subheading-destination">Avg. distance</h3>
+        <p class="subheading-destination-paragraph">384,400km</p>
+        <h3 class="subheading-destination">Est. travel time</h3>
+        <p class="subheading-destination-paragraph">3 Days</p>
+    </div>
+    </article> 
+    <article class="planet-info info-mars">
+      <h2 class="planet-name-header">Mars</h1>
+      <p class="destination-paragraph">Don’t forget to pack your hiking boots. You’ll need them to tackle Olympus Mons, the tallest planetary mountain in our solar system. It’s two and a half times the size of Everest!</p>
+      <div class="planet-date-container">
+        <h3 class="subheading-destination">Avg. distance</h3>
+        <p class="subheading-destination-paragraph">225 mil. km</p>
+        <h3 class="subheading-destination">Est. travel time</h3>
+        <p class="subheading-destination-paragraph">9 months</p>
+    </div>
+    </article> 
+    <article class="planet-info info-europa">
+      <h2 class="planet-name-header">Europa</h1>
+      <p class="destination-paragraph">The smallest of the four Galilean moons orbiting Jupiter, Europa is a winter lover’s dream. With an icy surface, it’s perfect for a bit of ice skating, curling, hockey, or simple relaxation in your snug wintery cabin.</p>
+      <div class="planet-date-container">
+        <h3 class="subheading-destination">Avg. distance</h3>
+        <p class="subheading-destination-paragraph">628 mil. km</p>
+        <h3 class="subheading-destination">Est. travel time</h3>
+        <p class="subheading-destination-paragraph">3 years</p>
+    </div>
+    </article> 
+    <article class="planet-info info-titan">
+      <h2 class="planet-name-header">Titan</h1>
+      <p class="destination-paragraph">The only moon known to have a dense atmosphere other than Earth, Titan is a home away from home (just a few hundred degrees colder!). As a bonus, you get striking views of the Rings of Saturn.</p>
+      <div class="planet-date-container">
+        <h3 class="subheading-destination">Avg. distance</h3>
+        <p class="subheading-destination-paragraph">1.6 bil. km</p>
+        <h3 class="subheading-destination">Est. travel time</h3>
+        <p class="subheading-destination-paragraph">7 years</p>
+    </div>
+    </article> 
+
+  </section>
+  
 </main>
 </body>
 </html>
