--- a/destination.html
+++ b/destination.html
@@ -23,9 +23,9 @@ crossorigin="anonymous"
   <button class="menu-btn">
     <i class="fa-solid fa-bars"></i>
     <ul class="menu">
-      <li class="menu-item"><a href="#">Home</a></li>
-      <li class="menu-item"><a href="#">Destination</a></li>
-      <li class="menu-item"><a href="#">Technology</a></li>
+      <li class="menu-item"><a href="#"><span class="bold-text">00</span>Home</a></li>
+      <li class="menu-item"><a href="#"><span class="bold-text">01</span>Destination</a></li>
+      <li class="menu-item"><a href="#"><span class="bold-text">02</span>Technology</a></li>
     </ul>
   </button>
 </nav>
