--- a/destination.html
+++ b/destination.html
@@ -25,7 +25,7 @@ crossorigin="anonymous"
     <ul class="menu">
       <li class="menu-item"><a href="#"><span class="bold-text">00</span>Home</a></li>
       <li class="menu-item"><a href="#"><span class="bold-text">01</span>Destination</a></li>
-      <li class="menu-item"><a href="#"><span class="bold-text">02</span>Technology</a></li>
+      <li class="menu-item"><a href="./Technology/Space-Project/technology.html"><span class="bold-text">02</span>Technology</a></li>
     </ul>
   </button>
 </nav>
@@ -34,7 +34,7 @@ crossorigin="anonymous"
     <ul class="menu-lg">
       <li class="menu-item-lg"><a href="#"><span class="bold-text">00</span>Home</a></li>
       <li class="menu-item-lg"><a href="#"><span class="bold-text">01</span>Destination</a></li>
-      <li class="menu-item-lg"><a href="#"><span class="bold-text">03</span>Technology</a></li>
+      <li class="menu-item-lg"><a href="./Technology/Space-Project/technology.html"><span class="bold-text">03</span>Technology</a></li>
     </ul>
   </button>
 </nav>
