apply final form

--- a/destination.html
+++ b/destination.html
@@ -23,8 +23,8 @@ crossorigin="anonymous"
   <button class="menu-btn">
     <i class="fa-solid fa-bars"></i>
     <ul class="menu">
-      <li class="menu-item"><a href="#"><span class="bold-text">00</span>Home</a></li>
-      <li class="menu-item"><a href="#"><span class="bold-text">01</span>Destination</a></li>
+      <li class="menu-item"><a href="/home.html"><span class="bold-text">00</span>Home</a></li>
+      <li class="menu-item"><a href="/destination.html"><span class="bold-text">01</span>Destination</a></li>
       <li class="menu-item"><a href="./Technology/Space-Project/technology.html"><span class="bold-text">02</span>Technology</a></li>
     </ul>
   </button>
@@ -32,8 +32,8 @@ crossorigin="anonymous"
 <!--Navbar for the medium and large devices-->
 <nav class="navigation-lg">
     <ul class="menu-lg">
-      <li class="menu-item-lg"><a href="#"><span class="bold-text">00</span>Home</a></li>
-      <li class="menu-item-lg"><a href="#"><span class="bold-text">01</span>Destination</a></li>
+      <li class="menu-item-lg"><a href="/home.html"><span class="bold-text">00</span>Home</a></li>
+      <li class="menu-item-lg"><a href="/destination.html"><span class="bold-text">01</span>Destination</a></li>
       <li class="menu-item-lg"><a href="./Technology/Space-Project/technology.html"><span class="bold-text">03</span>Technology</a></li>
     </ul>
   </button>
