--- a/home.html
+++ b/home.html
@@ -44,21 +44,21 @@
           <li class="active">
             <a
               class="ff-sans-cond uppercase text-white letter-spacing-2"
-              href="./index.css"
+              href="#"
               ><span aria-hidden="true">00</span>Home</a
             >
           </li>
           <li>
             <a
               class="ff-sans-cond uppercase text-white letter-spacing-2"
-              href="destination.html"
+              href="/destination.html"
               ><span aria-hidden="true">01</span>Destination</a
             >
           </li>
           <li>
             <a
               class="ff-sans-cond uppercase text-white letter-spacing-2"
-              href="technology.html"
+              href="/Technology/Space-Project/technology.html"
               ><span aria-hidden="true">02</span>Technology</a
             >
           </li>
