Add the technology folder

--- a/home.html
+++ b/home.html
@@ -58,7 +58,7 @@
           <li>
             <a
               class="ff-sans-cond uppercase text-white letter-spacing-2"
-              href="/Technology/Space-Project/technology.html"
+              href="/technology/technology.html"
               ><span aria-hidden="true">02</span>Technology</a
             >
           </li>
